--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <title>Blackjack ♠</title>
-    <link rel="stylesheet" href="blackjack.css" />
+    <link rel="stylesheet" href="style.css" />
   </head>
 
   <body>
@@ -43,6 +43,6 @@
         </table>
       </div>
     </div>
-    <script src="blackjack.js"></script>
+    <script src="script.js"></script>
   </body>
 </html>
