--- a/2048-game/index.html
+++ b/2048-game/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <title>2048 Game</title>
-    <link rel="Stylesheet" href="2048.css">
+    <link rel="Stylesheet" href="style.css">
 
 </head>
 <body>
@@ -16,7 +16,7 @@
 
 <div class="grid"></div>
 <div id="result"></div>
-<script src="2048.js"></script>
+<script src="script.js"></script>
 
 
 </body>
